Add support for custom headers (#112)
