# internal/provider/types/app_validation.go
@@ -1,0 +1,15 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type AppValidation struct {
+	Details     types.String `tfsdk:"details"`
+	Key         types.String `tfsdk:"key"`
+	Name        types.String `tfsdk:"name"`
+	Severity    types.String `tfsdk:"severity"`
+	Status      types.String `tfsdk:"status"`
+	UpdatedAt   types.String `tfsdk:"updated_at"`
+	UsageReason types.String `tfsdk:"usage_reason"`
+}
