# internal/provider/types/propagation_status.go
@@ -1,0 +1,9 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type PropagationStatus struct {
+	Status types.String `tfsdk:"status"`
+}
