# internal/provider/types/resource_access_user.go
@@ -5,12 +5,13 @@ package types
 import "github.com/hashicorp/terraform-plugin-framework/types"
 
 type ResourceAccessUser struct {
-	AccessLevel     ResourceAccessLevel `tfsdk:"access_level"`
-	Email           types.String        `tfsdk:"email"`
-	ExpirationDate  types.String        `tfsdk:"expiration_date"`
-	FullName        types.String        `tfsdk:"full_name"`
-	HasDirectAccess types.Bool          `tfsdk:"has_direct_access"`
-	NumAccessPaths  types.Int64         `tfsdk:"num_access_paths"`
-	ResourceID      types.String        `tfsdk:"resource_id"`
-	UserID          types.String        `tfsdk:"user_id"`
+	AccessLevel       ResourceAccessLevel `tfsdk:"access_level"`
+	Email             types.String        `tfsdk:"email"`
+	ExpirationDate    types.String        `tfsdk:"expiration_date"`
+	FullName          types.String        `tfsdk:"full_name"`
+	HasDirectAccess   types.Bool          `tfsdk:"has_direct_access"`
+	NumAccessPaths    types.Int64         `tfsdk:"num_access_paths"`
+	PropagationStatus *PropagationStatus  `tfsdk:"propagation_status"`
+	ResourceID        types.String        `tfsdk:"resource_id"`
+	UserID            types.String        `tfsdk:"user_id"`
 }
